--- a/src/Frontend/category.html
+++ b/src/Frontend/category.html
@@ -78,6 +78,8 @@
             <nav class="flex text-sm text-gray-600">
                 <a href="index.html" class="hover:text-orange-500">Home</a>
                 <span class="mx-2">/</span>
+                <a href="index.html#categoryList" class="hover:text-orange-500">Category</a>
+                <span class="mx-2">/</span>
                 <span class="text-gray-800 font-semibold" id="categoryName">All Products</span>
             </nav>
         </div>
@@ -102,6 +104,7 @@
 
             <!-- Products Grid -->
             <div class="flex-1">
+
                 <div class="flex justify-between items-center mb-6">
                     <h2 class="text-2xl font-bold text-gray-800"><span id="categoryTitle">All Products</span> (<span
                             id="productCount">0</span>)</h2>
@@ -124,75 +127,208 @@
             </div>
         </div>
     </main>
-
     <script>
-        // Extended Mock Data with Categories
-        const ALL_PRODUCTS = [
+        // Extended Mock Data with Categories (FALLBACK)
+        // Used when Backend has no data for demonstration purposes
+        const MOCK_PRODUCTS = [
             // Fashion
-            { id: '201', name: "Nike Air Max Classic Red", category: "Fashion", price: 210, oldPrice: 420, image: "https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=400", badge: "50% OFF", rating: 4.7, sold: 540 },
-            { id: '202', name: "Converse Classic White Sneakers", category: "Fashion", price: 65, oldPrice: 130, image: "https://images.unsplash.com/photo-1491553895911-0055eca6402d?w=400", badge: "50% OFF", rating: 4.9, sold: 1540 },
-            { id: '203', name: "Adidas Running Shoes Black", category: "Fashion", price: 120, oldPrice: 240, image: "https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=400", badge: "HOT", rating: 4.5, sold: 230 },
-            { id: '204', name: "Canvas Casual Sneakers", category: "Fashion", price: 18, oldPrice: 25, image: "https://images.unsplash.com/photo-1600269452121-4f2416e55c28?w=400", badge: "NEW", rating: 4.2, sold: 89 },
+            {
+                id: '201', name: "Nike Air Max Classic Red", categoryId: "Fashion", price: 210000, image:
+                    "https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=400", badge: "50% OFF", rating: 4.7, sold: 540
+            },
+            {
+                id: '202', name: "Converse Classic White Sneakers", categoryId: "Fashion", price: 650000, image:
+                    "https://images.unsplash.com/photo-1491553895911-0055eca6402d?w=400", badge: "50% OFF", rating: 4.9, sold: 1540
+            },
+            {
+                id: '203', name: "Adidas Running Shoes Black", categoryId: "Fashion", price: 1200000, image:
+                    "https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=400", badge: "HOT", rating: 4.5, sold: 230
+            },
 
             // Mobile & Gadgets
-            { id: '301', name: "iPhone 14 Pro Max 256GB", category: "Mobile", price: 899, oldPrice: 1199, image: "https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400", badge: "BEST", rating: 4.9, sold: 2340 },
-            { id: '302', name: "Samsung Galaxy S23 Ultra", category: "Mobile", price: 799, oldPrice: 1099, image: "https://images.unsplash.com/photo-1610945415295-d9bbf067e59c?w=400", badge: "HOT", rating: 4.8, sold: 1890 },
-            { id: '303', name: "Xiaomi Redmi Note 12 Pro", category: "Mobile", price: 299, oldPrice: 399, image: "https://images.unsplash.com/photo-1598327105666-5b89351aff97?w=400", badge: "25% OFF", rating: 4.6, sold: 987 },
+            {
+                id: '301', name: "iPhone 14 Pro Max 256GB", categoryId: "Mobile", price: 28990000, image:
+                    "https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400", badge: "BEST", rating: 4.9, sold: 2340
+            },
+            {
+                id: '302', name: "Samsung Galaxy S23 Ultra", categoryId: "Mobile", price: 27990000, image:
+                    "https://images.unsplash.com/photo-1610945415295-d9bbf067e59c?w=400", badge: "HOT", rating: 4.8, sold: 1890
+            },
 
             // Electronics
-            { id: '401', name: "Sony WH-1000XM5 Headphones", category: "Electronics", price: 99, oldPrice: 198, image: "https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400", badge: "50% OFF", rating: 4.8, sold: 560 },
-            { id: '402', name: "Canon EOS 90D DSLR Camera", category: "Electronics", price: 450, oldPrice: 599, image: "https://images.unsplash.com/photo-1516035069371-29a1b244cc32?w=400", badge: "SALE", rating: 4.7, sold: 123 },
-            { id: '403', name: "Nikon D3500 DSLR Camera", category: "Electronics", price: 36, oldPrice: 48, image: "https://images.unsplash.com/photo-1606980227901-1fd7976558c7?w=400", badge: "25% OFF", rating: 4.6, sold: 98 },
+            {
+                id: '401', name: "Sony WH-1000XM5 Headphones", categoryId: "Electronics", price: 6990000, image:
+                    "https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400", badge: "50% OFF", rating: 4.8, sold: 560
+            },
+            {
+                id: '402', name: "Canon EOS 90D DSLR Camera", categoryId: "Electronics", price: 24500000, image:
+                    "https://images.unsplash.com/photo-1516035069371-29a1b244cc32?w=400", badge: "SALE", rating: 4.7, sold: 123
+            },
 
             // Home
-            { id: '501', name: "Modern Chair Brown Leather", category: "Home", price: 25, oldPrice: 50, image: "https://images.unsplash.com/photo-1587563871167-1ee9c731aefb?w=400", badge: "50% OFF", rating: 4.3, sold: 340 },
-            { id: '502', name: "Luxury Sofa Set 3 Seater", category: "Home", price: 599, oldPrice: 899, image: "https://images.unsplash.com/photo-1555041469-a586c61ea9bc?w=400", badge: "NEW", rating: 4.8, sold: 45 },
+            {
+                id: '501', name: "Modern Chair Brown Leather", categoryId: "Home", price: 1250000, image:
+                    "https://images.unsplash.com/photo-1587563871167-1ee9c731aefb?w=400", badge: "50% OFF", rating: 4.3, sold: 340
+            },
 
             // Sports
-            { id: '601', name: "Yoga Mat Premium Quality", category: "Sports", price: 19, oldPrice: 29, image: "https://images.unsplash.com/photo-1601925260368-ae2f83cf8b7f?w=400", badge: "35% OFF", rating: 4.5, sold: 789 },
-            { id: '602', name: "Dumbbell Set 20kg Adjustable", category: "Sports", price: 45, oldPrice: 70, image: "https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=400", badge: "SALE", rating: 4.7, sold: 234 },
+            {
+                id: '601', name: "Yoga Mat Premium Quality", categoryId: "Sports", price: 190000, image:
+                    "https://images.unsplash.com/photo-1601925260368-ae2f83cf8b7f?w=400", badge: "35% OFF", rating: 4.5, sold: 789
+            },
         ];
 
-        function loadProducts() {
+        // API Base URL
+        const API_BASE_URL = 'http://localhost:8080/api';
+
+        async function loadProducts() {
             const params = new URLSearchParams(window.location.search);
-            const category = params.get('category') || 'All';
+            let categoryId = params.get('id');
+            // Sanitize ID
+            if (categoryId && (categoryId === 'undefined' || categoryId === 'null' || categoryId.trim() === '')) {
+                categoryId = null;
+            } else if (categoryId) {
+                categoryId = categoryId.trim();
+            }
 
-            document.getElementById('categoryName').textContent = category;
-            document.getElementById('categoryTitle').textContent = category;
+            let categoryName = params.get('name') || 'All Products';
 
-            let filtered = category === 'All' ? ALL_PRODUCTS : ALL_PRODUCTS.filter(p => p.category === category);
+            document.getElementById('categoryTitle').textContent = categoryName;
+            document.getElementById('categoryName').textContent = categoryName;
 
-            document.getElementById('productCount').textContent = filtered.length;
             const grid = document.getElementById('productsGrid');
             const noProducts = document.getElementById('noProducts');
 
-            if (filtered.length === 0) {
-                grid.classList.add('hidden');
-                noProducts.classList.remove('hidden');
-                return;
-            }
+            let productsToDisplay = [];
 
-            grid.innerHTML = filtered.map(p => `
-                <div onclick="goToProduct('${p.id}')" class="bg-white rounded-lg shadow hover:shadow-lg transition-all cursor-pointer overflow-hidden">
-                    <div class="relative">
-                        <img src="${p.image}" alt="${p.name}" class="w-full h-48 object-cover">
-                        ${p.badge ? `<div class="absolute top-2 left-2 bg-orange-600 text-white px-2 py-1 rounded text-xs font-bold">${p.badge}</div>` : ''}
-                    </div>
-                    <div class="p-3">
-                        <p class="text-sm text-gray-700 mb-2 h-10 line-clamp-2">${p.name}</p>
-                        <p class="text-orange-600 text-lg font-bold">₫${p.price}</p>
-                        <div class="flex items-center text-xs text-gray-500 mt-1">
-                            <i class="fas fa-star text-yellow-400"></i>
-                            <span class="ml-1">${p.rating}</span>
-                            <span class="ml-2">Sold ${p.sold}</span>
+            try {
+                grid.innerHTML = '<div class="col-span-full text-center text-gray-500 py-20">Loading products...</div>';
+
+                // 1. Fetch Categories for Name Mapping
+                const catResponse = await fetch(`${API_BASE_URL}/categories`);
+                const categories = catResponse.ok ? await catResponse.json() : [];
+                const catMap = {};
+                categories.forEach(c => catMap[c.id] = c.name);
+
+                // Robustness: Recover name if missing or default
+                if (categoryId && (categoryName === 'Category' || categoryName === 'All Products') && catMap[categoryId]) {
+                    categoryName = catMap[categoryId];
+                    document.getElementById('categoryName').textContent = categoryName;
+                    document.getElementById('categoryTitle').innerHTML = categoryName + debugText;
+                }
+
+                // 2. Try fetching from Backend by ID or All
+                let realProducts = [];
+                console.log(`DEBUG: Detected CategoryID: ${categoryId}, CategoryName: ${categoryName}`);
+
+                if (categoryId && categoryId.length > 5) {
+                    console.log(`DEBUG: Fetching by ID: ${API_BASE_URL}/products/category/${categoryId}`);
+                    const response = await fetch(`${API_BASE_URL}/products/category/${categoryId}`);
+                    if (response.ok) {
+                        realProducts = await response.json();
+                    }
+                }
+
+                // If no products by ID, or ID is missing, fetch ALL and filter more flexibly
+                if (realProducts.length === 0) {
+                    const allResponse = await fetch(`${API_BASE_URL}/products`);
+                    if (allResponse.ok) {
+                        const allProducts = await allResponse.json();
+
+                        // Filter
+                        if (categoryName === 'All Products' && !categoryId) {
+                            realProducts = allProducts;
+                        } else {
+                            realProducts = allProducts.filter(p => {
+                                const pCategories = p.categories || [];
+
+                                // Direct ID Match
+                                if (categoryId && pCategories.includes(categoryId)) return true;
+
+                                // Name Match
+                                return pCategories.some(id => {
+                                    const name = catMap[id];
+                                    if (!name) return false;
+                                    return name.toLowerCase().includes(categoryName.toLowerCase()) ||
+                                        categoryName.toLowerCase().includes(name.toLowerCase());
+                                });
+                            });
+                        }
+                    }
+                }
+
+                productsToDisplay = realProducts;
+
+                // 2. Fallback to Mock Data ONLY if no real products found
+                // 2. Fallback to Mock Data ONLY if no real products found AND we are not viewing a specific category
+                if (productsToDisplay.length === 0 && !categoryId && categoryName === 'All Products') {
+                    console.warn("No products from API. Using Mock Data for demo.");
+                    productsToDisplay = MOCK_PRODUCTS;
+                }
+
+                // 3. Render
+                document.getElementById('productCount').textContent = productsToDisplay.length;
+
+                if (productsToDisplay.length === 0) {
+                    grid.classList.add('hidden');
+                    noProducts.classList.remove('hidden');
+                    grid.innerHTML = '';
+                    return;
+                }
+
+                grid.classList.remove('hidden');
+                noProducts.classList.add('hidden');
+
+                grid.innerHTML = productsToDisplay.map(p => {
+                    // Image normalization
+                    let imageUrl = 'https://via.placeholder.com/400x400?text=No+Image';
+                    if (p.images && p.images.length > 0) imageUrl = p.images[0];
+                    else if (p.image) imageUrl = p.image;
+
+                    // Price normalization
+                    let priceVal = 0;
+                    if (p.variants && p.variants.length > 0) priceVal = p.variants[0].price;
+                    else if (p.price) priceVal = p.price;
+
+                    const priceDisplay = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(priceVal);
+
+                    // Stats
+                    const sold = p.sold || Math.floor(Math.random() * 500) + 10;
+                    const rating = p.rating || (Math.random() * 1 + 4).toFixed(1);
+
+                    return `
+                        <div onclick="goToProduct('${p.id || p._id}')"
+                            class="bg-white rounded-lg shadow hover:shadow-lg transition-all cursor-pointer overflow-hidden group">
+                            <div class="relative">
+                                <img src="${imageUrl}" alt="${p.name}" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                                ${p.badge ? `<div class="absolute top-2 left-2 bg-red-500 text-white text-[10px] font-bold px-1.5 py-0.5 rounded-sm shadow-sm">${p.badge}</div>` : ''}
+                            </div>
+                            <div class="p-3">
+                                <p class="text-sm text-gray-700 mb-2 h-10 line-clamp-2">${p.name}</p>
+                                <p class="text-orange-600 text-lg font-bold">${priceDisplay}</p>
+                                <div class="flex items-center text-xs text-gray-500 mt-1">
+                                    <div class="flex text-yellow-400 mr-2">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star-half-alt"></i>
+                                    </div>
+                                    <span class="border-l border-gray-300 pl-2">Sold ${sold}</span>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            `).join('');
+                    `;
+                }).join('');
+
+            } catch (error) {
+                console.error('Error loading products:', error);
+                grid.innerHTML = '<div class="col-span-full text-center text-red-500 py-20">Error loading products.</div>';
+                document.getElementById('productCount').textContent = 0;
+            }
         }
 
         function goToProduct(id) {
-            localStorage.setItem('lastClickedProductId', id);
             window.location.href = `product-detail.html?id=${id}`;
         }
 
@@ -210,7 +346,8 @@
                 document.getElementById('guestNav').classList.add('hidden');
                 document.getElementById('userNav').classList.remove('hidden');
                 document.getElementById('userName').textContent = userName;
-                document.getElementById('userAvatar').src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fff&color=f97316`;
+                document.getElementById('userAvatar').src =
+                    `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fff&color=f97316`;
             } else {
                 document.getElementById('guestNav').classList.remove('hidden');
                 document.getElementById('userNav').classList.add('hidden');
