--- a/src/Frontend/product-detail.html
+++ b/src/Frontend/product-detail.html
@@ -305,8 +305,11 @@
             '106': { name: "Canvas Sneakers", cat: "Fashion > Shoes", price: 18.00, oldPrice: 25.00, discount: "28%", stock: 230, image: "https://images.unsplash.com/photo-1491553895911-0055eca6402d?w=800&h=800&fit=crop", thumbnails: [], colors: ["White"], sizes: ["38", "39"], desc: "Casual everyday wear." }
         };
 
+        // API Base URL
+        const API_BASE_URL = 'http://localhost:8080/api';
+
         // --- DYNAMIC LOADING LOGIC ---
-        document.addEventListener('DOMContentLoaded', () => {
+        document.addEventListener('DOMContentLoaded', async () => {
             const params = new URLSearchParams(window.location.search);
             let id = params.get('id');
 
@@ -315,39 +318,141 @@
                 id = localStorage.getItem('lastClickedProductId');
             }
 
-            const product = MOCK_PRODUCTS[id];
+            let product = null;
+            let isReal = false;
+
+            // Try Fetch from Backend first
+            if (id) {
+                try {
+                    const response = await fetch(`${API_BASE_URL}/products/${id}`);
+                    if (response.ok) {
+                        product = await response.json();
+                        isReal = true;
+                    }
+                } catch (err) { console.error("API error:", err); }
+            }
+
+            // Fallback to MOCK
+            if (!product) {
+                product = MOCK_PRODUCTS[id];
+            }
 
             if (product) {
                 // Populate Data
                 document.title = product.name + " - Shopee Clone";
                 document.getElementById('productTitle').textContent = product.name;
                 document.getElementById('breadcrumbProduct').textContent = product.name;
-                document.getElementById('breadcrumbCategory').textContent = product.cat.split(' > ')[0];
-                document.getElementById('mainImage').src = product.image;
-                document.getElementById('ratingValue').textContent = (Math.random() * (5.0 - 4.0) + 4.0).toFixed(1);
-                document.getElementById('stockCount').textContent = `${product.stock} pieces available`;
 
-                // Price
+                // Breadcrumbs & Category Name Resolution
+                let catDisplay = "Other";
+                let shopAddress = "Hanoi, Vietnam"; // Default fallback
+
+                if (isReal) {
+                    // 1. Resolve Category
+                    if (product.categories && product.categories.length > 0) {
+                        try {
+                            const catRes = await fetch(`${API_BASE_URL}/categories/${product.categories[0]}`);
+                            if (catRes.ok) {
+                                const catData = await catRes.json();
+                                catDisplay = catData.name;
+                            } else {
+                                catDisplay = "Products";
+                            }
+                        } catch (e) {
+                            console.error("Error fetching category:", e);
+                            catDisplay = "Products";
+                        }
+                    }
+
+                    // 2. Resolve Shop Address (Ships From)
+                    if (product.shopId) {
+                        try {
+                            const shopRes = await fetch(`${API_BASE_URL}/shop/${product.shopId}`);
+                            if (shopRes.ok) {
+                                const shopData = await shopRes.json();
+                                if (shopData.address) {
+                                    shopAddress = shopData.address;
+                                }
+                            }
+                        } catch (e) {
+                            console.error("Error fetching shop address:", e);
+                        }
+                    }
+                } else if (product.cat) {
+                    catDisplay = product.cat.split(' > ')[0];
+                }
+                document.getElementById('breadcrumbCategory').textContent = catDisplay;
+
+                // Normalize Images
+                let mainImg = "";
+                let thumbs = [];
+                if (isReal) {
+                    mainImg = (product.images && product.images.length > 0) ? product.images[0] : 'https://via.placeholder.com/800';
+                    thumbs = product.images || [];
+                } else {
+                    mainImg = product.image;
+                    thumbs = product.thumbnails && product.thumbnails.length ? product.thumbnails : [product.image];
+                }
+                document.getElementById('mainImage').src = mainImg;
+
+                // Normalize Price & Discount
+                let priceVal = 0;
+                let oldPriceVal = 0;
+                let discountText = "";
+
+                if (isReal) {
+                    if (product.variants && product.variants.length > 0) {
+                        priceVal = product.variants[0].price;
+                        oldPriceVal = priceVal * 1.2; // Simulated
+                        discountText = "20% OFF";
+                    }
+                } else {
+                    priceVal = product.price;
+                    oldPriceVal = product.oldPrice || priceVal * 1.5;
+                    discountText = product.discount || "50% OFF";
+                }
+
                 document.getElementById('priceContainer').innerHTML = `
-                    <span class="text-gray-400 line-through text-lg mr-3">₫${product.oldPrice}.00</span>
-                    <span class="text-orange-600 text-3xl font-bold mr-3">₫${product.price}</span>
-                    <span class="bg-orange-500 text-white px-2 py-1 rounded text-sm font-semibold">${product.discount} OFF</span>
+                    <span class="text-gray-400 line-through text-lg mr-3">₫${new Intl.NumberFormat('vi-VN').format(oldPriceVal)}</span>
+                    <span class="text-orange-600 text-3xl font-bold mr-3">₫${new Intl.NumberFormat('vi-VN').format(priceVal)}</span>
+                    <span class="bg-orange-500 text-white px-2 py-1 rounded text-sm font-semibold">${discountText}</span>
                 `;
 
-                // Colors
+                // Stats
+                const rating = isReal ? (Math.random() * (5.0 - 4.5) + 4.5).toFixed(1) : (product.rating || 4.8);
+                const sold = isReal ? (Math.floor(Math.random() * 1000) + 10) : (product.sold || "1.2k");
+                document.getElementById('ratingValue').textContent = rating;
+                document.getElementById('soldCount').textContent = `${sold} Sold`;
+
+                // Stock
+                let stock = isReal ? (product.variants ? product.variants.reduce((s, v) => s + v.stock, 0) : 0) : (product.stock || 100);
+                document.getElementById('stockCount').textContent = `${stock} pieces available`;
+
+                // Colors & Sizes
                 const colorContainer = document.getElementById('colorContainer');
-                if (product.colors && product.colors.length > 0) {
-                    colorContainer.innerHTML = product.colors.map((c, i) =>
+                const sizeContainer = document.getElementById('sizeContainer');
+
+                let colors = [];
+                let sizes = [];
+
+                if (isReal && product.variants) {
+                    colors = [...new Set(product.variants.map(v => v.color).filter(v => v))];
+                    sizes = [...new Set(product.variants.map(v => v.size).filter(v => v))];
+                } else {
+                    colors = product.colors || [];
+                    sizes = product.sizes || [];
+                }
+
+                if (colors.length > 0) {
+                    colorContainer.innerHTML = colors.map((c, i) =>
                         `<button onclick="selectOption(this, 'color')" class="color-btn px-4 py-2 border-2 ${i === 0 ? 'border-orange-500 bg-orange-50' : 'border-gray-300'} rounded-lg font-medium hover:border-orange-500 transition">${c}</button>`
                     ).join('');
                 } else {
                     colorContainer.parentElement.style.display = 'none';
                 }
 
-                // Sizes
-                const sizeContainer = document.getElementById('sizeContainer');
-                if (product.sizes && product.sizes.length > 0) {
-                    sizeContainer.innerHTML = product.sizes.map((s, i) =>
+                if (sizes.length > 0) {
+                    sizeContainer.innerHTML = sizes.map((s, i) =>
                         `<button onclick="selectOption(this, 'size')" class="size-btn px-6 py-2 border-2 border-gray-300 rounded-lg font-medium hover:border-orange-500 transition">${s}</button>`
                     ).join('');
                 } else {
@@ -355,26 +460,45 @@
                 }
 
                 // Description & Specs
-                document.getElementById('descContainer').innerHTML = `<p>${product.desc}</p><p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>`;
+                const description = isReal ? (product.description || "No description available.") : product.desc;
+                document.getElementById('descContainer').innerHTML = `<p>${description}</p>`;
+
                 document.getElementById('specsContainer').innerHTML = `
-                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Category</span><span class="text-gray-800 font-medium">${product.cat}</span></div>
-                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Stock</span><span class="text-gray-800 font-medium">${product.stock}</span></div>
-                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Ships From</span><span class="text-gray-800 font-medium">Hanoi, Vietnam</span></div>
+                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Category</span><span class="text-gray-800 font-medium">${catDisplay}</span></div>
+                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Stock</span><span class="text-gray-800 font-medium">${stock}</span></div>
+                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Ships From</span><span class="text-gray-800 font-medium">${shopAddress}</span></div>
                 `;
 
                 // Thumbnails
                 const gallery = document.getElementById('imageGallery');
-                const thumbs = product.thumbnails && product.thumbnails.length ? product.thumbnails : [product.image, product.image];
-                gallery.innerHTML = thumbs.map((img, i) => `
-                    <img onclick="changeImage(this)" src="${img}" class="w-full h-20 object-cover rounded cursor-pointer border-2 ${i === 0 ? 'thumbnail-active' : 'border-gray-200'} hover:border-orange-500 transition">
-                `).join('');
+                if (thumbs.length > 0) {
+                    gallery.innerHTML = thumbs.map((img, i) => `
+                        <img onclick="changeImage(this)" src="${img}" class="w-full h-20 object-cover rounded cursor-pointer border-2 ${i === 0 ? 'thumbnail-active' : 'border-gray-200'} hover:border-orange-500 transition">
+                    `).join('');
+                }
+
+                // Update Globals for addToCart
+                window.currentProduct = product;
+                window.isCurrentReal = isReal;
 
             } else {
-                // If invalid ID, just keep loading state or redirect
                 document.getElementById('productTitle').textContent = "Product Not Found";
                 document.getElementById('priceContainer').innerHTML = "<span class='text-red-500'>Item unavailable</span>";
-            }
 
+                // DEBUG INFO
+                const debugDiv = document.createElement('div');
+                debugDiv.className = "bg-red-100 p-4 rounded mt-4 text-red-700 text-xs";
+                debugDiv.innerHTML = `
+                    <p class="font-bold text-sm mb-1">🔍 DIAGNOSTIC INFO:</p>
+                    <p><strong>Full URL:</strong> ${window.location.href}</p>
+                    <p><strong>URL ID Param:</strong> ${params.get('id')}</p>
+                    <p><strong>LocalStorage ID:</strong> ${localStorage.getItem('lastClickedProductId')}</p>
+                    <p><strong>Final ID Used:</strong> ${id}</p>
+                    <p><strong>API Check:</strong> ${API_BASE_URL}/products/${id}</p>
+                    <p class="mt-2 text-blue-700 italic">Please screenshot this entire box.</p>
+                `;
+                document.getElementById('descContainer').appendChild(debugDiv);
+            }
 
             updateNavbar();
             updateCartBadge();
@@ -421,14 +545,14 @@
                 return;
             }
 
-            const params = new URLSearchParams(window.location.search);
-            let id = params.get('id') || localStorage.getItem('lastClickedProductId');
-            const product = MOCK_PRODUCTS[id];
-
+            const product = window.currentProduct;
             if (!product) {
-                alert('Product not found!');
+                alert('Product data not loaded yet!');
                 return;
             }
+
+            const params = new URLSearchParams(window.location.search);
+            let id = params.get('id') || localStorage.getItem('lastClickedProductId');
 
             // Get selected options
             const selectedColorBtn = document.querySelector('#colorContainer button.border-orange-500');
@@ -437,29 +561,35 @@
             const color = selectedColorBtn ? selectedColorBtn.textContent : null;
             const size = selectedSizeBtn ? selectedSizeBtn.textContent : null;
 
-            // Check if options are required? For now we assume they are optional or already selected
-
             const quantity = parseInt(document.getElementById('quantity').value);
             const cart = JSON.parse(localStorage.getItem('cart')) || [];
 
             // Unique ID based on product + variations
-            const cartItemId = `${id}-${color || ''}-${size || ''}`;
+            const cartItemId = `${id || product.id}-${color || ''}-${size || ''}`;
 
-            const existing = cart.find(item => item.cartItemId === cartItemId || (item.id === id && item.color === color && item.size === size));
+            const existing = cart.find(item => item.cartItemId === cartItemId);
+
+            // Determine Price for Cart
+            let priceVal = 0;
+            if (window.isCurrentReal) {
+                if (product.variants && product.variants.length > 0) priceVal = product.variants[0].price;
+            } else {
+                priceVal = product.price;
+            }
 
             if (existing) {
                 existing.quantity += quantity;
             } else {
                 cart.push({
-                    id: id,
-                    cartItemId: cartItemId, // New unique identifier
+                    id: id || product.id,
+                    cartItemId: cartItemId,
                     name: product.name,
-                    price: product.price,
-                    image: product.image,
+                    price: priceVal,
+                    image: (product.images && product.images.length > 0) ? product.images[0] : (product.image || 'https://via.placeholder.com/200'),
                     quantity: quantity,
                     color: color,
                     size: size,
-                    checked: true // Default checked
+                    checked: true
                 });
             }
 
@@ -477,14 +607,14 @@
                 return;
             }
 
-            const params = new URLSearchParams(window.location.search);
-            let id = params.get('id') || localStorage.getItem('lastClickedProductId');
-            const product = MOCK_PRODUCTS[id];
-
+            const product = window.currentProduct;
             if (!product) {
-                alert('Product not found!');
+                alert('Product data not loaded yet!');
                 return;
             }
+
+            const params = new URLSearchParams(window.location.search);
+            let id = params.get('id') || localStorage.getItem('lastClickedProductId');
 
             // Get selected options
             const selectedColorBtn = document.querySelector('#colorContainer button.border-orange-500');
@@ -494,12 +624,21 @@
             const size = selectedSizeBtn ? selectedSizeBtn.textContent : null;
 
             const quantity = parseInt(document.getElementById('quantity').value);
+
+            // Determine Price
+            let priceVal = 0;
+            if (window.isCurrentReal) {
+                if (product.variants && product.variants.length > 0) priceVal = product.variants[0].price;
+            } else {
+                priceVal = product.price;
+            }
+
             const cart = [{
-                id: id,
-                cartItemId: `${id}-${color || ''}-${size || ''}`,
+                id: id || product.id,
+                cartItemId: `${id || product.id}-${color || ''}-${size || ''}`,
                 name: product.name,
-                price: product.price,
-                image: product.image,
+                price: priceVal,
+                image: (product.images && product.images.length > 0) ? product.images[0] : (product.image || 'https://via.placeholder.com/200'),
                 quantity: quantity,
                 color: color,
                 size: size,
