Fix Shop Approval persistence bug: Graceful owner handling and UI name display

--- a/src/Frontend/admin-dashboard.html
+++ b/src/Frontend/admin-dashboard.html
@@ -882,7 +882,7 @@
                         <div class="space-y-3 mb-6 bg-gray-50 p-4 rounded-lg">
                            <div class="flex items-center gap-2 text-sm text-gray-600">
                                 <i class="fas fa-user-circle w-4 text-gray-400"></i>
-                                <span class="truncate">${shop.identityFullName || 'Unknown Owner'}</span>
+                                <span class="truncate">${shop.ownerFullName || 'Unknown Owner'}</span>
                            </div>
                            <div class="flex items-center gap-2 text-sm text-gray-600">
                                 <i class="fas fa-phone w-4 text-gray-400"></i>
