--- a/src/Backend/src/main/resources/static/register.html
+++ b/src/Backend/src/main/resources/static/register.html
@@ -167,6 +167,8 @@
             const email = document.getElementById('email').value;
             const phone = document.getElementById('phone').value;
             const password = document.getElementById('password').value;
+            const btn = document.querySelector('button[onclick="goToOTP()"]');
+            const originalText = btn.innerText;
 
             if (!fullName || !email || !password || !phone) {
                 alert('⚠️ Please fill in all required fields!');
@@ -186,6 +188,11 @@
                 alert('❌ Password must be at least 8 characters, include uppercase, lowercase, and number!');
                 return;
             }
+
+            // Disable button
+            btn.disabled = true;
+            btn.innerText = 'Processing...';
+            btn.classList.add('opacity-70', 'cursor-not-allowed');
 
             // Save to localStorage for OTP step
             localStorage.setItem('pendingEmail', email);
@@ -234,10 +241,18 @@
                     }
 
                     alert('❌ ' + (data.message || 'Registration failed'));
+                    // Re-enable button on error
+                    btn.disabled = false;
+                    btn.innerText = originalText;
+                    btn.classList.remove('opacity-70', 'cursor-not-allowed');
                 }
             } catch (err) {
                 console.error(err);
                 alert('❌ Server connection error');
+                // Re-enable button on error
+                btn.disabled = false;
+                btn.innerText = originalText;
+                btn.classList.remove('opacity-70', 'cursor-not-allowed');
             }
         }
 
@@ -262,6 +277,19 @@
                 console.error(err);
             }
         }
+
+        // === ENTER KEY SUPPORT ===
+        document.addEventListener('DOMContentLoaded', function () {
+            const inputs = document.querySelectorAll('#fullName, #email, #phone, #password');
+            inputs.forEach(input => {
+                input.addEventListener('keydown', function (event) {
+                    if (event.key === 'Enter') {
+                        event.preventDefault();
+                        goToOTP(); // Call function directly
+                    }
+                });
+            });
+        });
     </script>
 </body>
 
